--- a/index2.html
+++ b/index2.html
@@ -73,7 +73,7 @@ a.callout-trigger,a.callout-trigger:visited,span.callout-trigger{color:#000;text
 <body>
 
 <script>
-const url = 'https://submit-form.com/KmOm9Ke1';   //full url goes here
+const url = 'https://submit-form.com/fihpjWFX';   //full url goes here
 </script>
 
 <div class="container-fluid" style="background-color: #FFF; height:55px;" >
